-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8, 5.9
-
None
-
Linux, X11, Plasma 5, OpenSuSE Leap 42.2, self-compiled qt 5.8 from git.
This must be the weirdest bug I have ever seen. Fully reproducible though.
Patch your qtwebengine/examples/webenginewidgets/demobrowser to add this at the end of BrowserApplication::postLaunch:
QTimer::singleShot(1000, this, []() {
QPalette palette;
palette.setColor(QPalette::WindowText, Qt::gray);
qApp->setPalette(palette);
});
then launch demobrowser (on any website), and you should see something very strange when the palette changes, a copy of the rendering of the tabbar and of the bottom toolbar appears inside the webengine rendering.
It's like there's an offset in the rendering or something.
Patch attached for convenience, as well as screenshot for clarity.
BTW this usually rapidly ends with this assert, e.g. after resizing the window.
ASSERT: "!d->offscreenWindow->handle()" in file /d/qt/5/kde/qtdeclarative/src/quickwidgets/qquickwidget.cpp, line 985
| For Gerrit Dashboard: QTBUG-59017 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 196250,3 | Translate the adjusted deviceWindowRect with an adjusted offset | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 196812,2 | Translate the adjusted deviceWindowRect with an adjusted offset | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |