Translate the adjusted deviceWindowRect with an adjusted offset

Otherwise the mismatched device pixel ratio will lead to incorrectly
offset blitting.

Task-number: QTBUG-59017
Change-Id: Iccbe9cd9704bccbceda4c8dafe87435b68b5cf3e
(cherry picked from commit dd8313d5be4fe4dd0defdf3eb78e2b47f0e2f20e)
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>